@@ -2,6 +2,7 @@
 -Add: Make the 'Failed' status clickable and open the log if clicked
 -Add: Make the file name of covers written to the output directory configureable
 -Change: Remove the info tab from the options editor
+-Change: Discard changes in the options editor when selecting a different file in file list
 -Fix: Problem dialog wasn't shown when dropping unsupported files on the soundKonverter or ReplayGain tool window
 -Fix: Show progress when decoding properly
 
